<resources>
    <string name="app_name">FinalAssignment</string>
    <string name="register_account">Register Account</string>
    <string name="welcome_to_mpesa_the_fast_and_safe_platform_to_send_and_receive_money_with_your_phone">Welcome to Mpesa, the fast and safe platform to send and receive money with your phone</string>
    <string name="welcome_to_the_most_world_s_best_network">WELCOME TO THE MOST WORLD\'S BEST NETWORK</string>
    <string name="textview">TextView</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="pin_code">Pin Code</string>
    <string name="phone">Phone</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="register">Register</string>
    <string name="have_no_account_register">Have no Account? Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account?Login</string>
    <string name="current_balance">Current Balance:</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="what_do_you_wish_to_perform_below">What do you wish to perform below?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="balance">Balance</string>
    <string name="current_balance_m100_00">Current Balance: M100.00</string>
    <string name="username">USERNAME:</string>


</resources>