<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:background="@drawable/mpsa"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_mpesa_the_fast_and_safe_platform_to_send_and_receive_money_with_your_phone"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="#FF5722"
        android:gravity="center"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:id="@+id/head"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="70dp"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        >


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="14dp"
            android:background="#FF5722"
            android:text="@string/register_account"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="14dp"
            android:background="#FF5722"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>